--- a/Client/src/Utkarsh/Authorizations/Signup.css
+++ b/Client/src/Utkarsh/Authorizations/Signup.css
@@ -192,6 +192,9 @@ p {
   margin-top: 20px;
   box-shadow: " rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px";
 }
+.text_sigup_box{
+  text-align: center;
+}
 @media (min-width: 768px) and (max-width: 2120) {
   .media {
     width: 90%;
