--- a/Client/src/Abhishek/Styles/home.css
+++ b/Client/src/Abhishek/Styles/home.css
@@ -1,3 +1,7 @@
+#home_style{
+    text-align: center;
+}
+
 
 #banner1{
     background-image: url('https://www.apple.com/in/home/images/heroes/iphone-14-pro/hero_iphone14pro_spring__9xo85pm6sbmm_large.jpg');
