--- a/Client/src/Utkarsh/Authorizations/Login.css
+++ b/Client/src/Utkarsh/Authorizations/Login.css
@@ -142,6 +142,7 @@ p {
 }
 
 .form__input {
+  color: #fff;
   background-color: #171717;
   border: 2px solid #191919;
   border-radius: 1em;
@@ -152,7 +153,8 @@ p {
 
 .form__input:focus,
 .form__input:hover {
-  background-color: #1f1f1f;
+  background-color: #191919;
+  color:#ffff
 }
 
 .form__label {
