--- a/Client/src/Abhishek/Styles/home.css
+++ b/Client/src/Abhishek/Styles/home.css
@@ -1,19 +1,18 @@
 #home_style{
     text-align: center;
 }
-
-
 #banner1{
     background-image: url('https://www.apple.com/in/home/images/heroes/iphone-14-pro/hero_iphone14pro_spring__9xo85pm6sbmm_large.jpg');
     position:relative;
-    top: 15;
+    top: 0;
     left: 0;
-    height: 80%;
+    height: 624px;
     width: 100%;
     margin-top: 40px;
-    background-size: cover;
+    background-size:3008px 624px;
     background-position: center;
     background-repeat: no-repeat;
+  
 }
 
 #banner1 h2{
@@ -39,6 +38,7 @@
 }
 
 .banner_links{
+  
     font-size: 21px;
     line-height: 1.381;
     font-weight: 400;
@@ -54,24 +54,13 @@
     text-decoration: none;
 }
 #banner2{
+   margin-top: 5px;
     background-image: url("https://www.apple.com/in/home/heroes/iphone-14/images/hero_iphone14_yellow__eun20sn4imi6_large.jpg");
-    position:absolute;
     width: 100%;
     height: 624px;
-    margin: auto;
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 80%;
-    width: 100%;
-    margin-top: 40px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
 }
 
 #banner2 h2{
@@ -109,6 +98,7 @@
     font-size: 56px;
     line-height: 1.07143;
     margin-bottom: -5px;
+    text-align: center;
     font-weight: 600;
     letter-spacing: -.005em;
     font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
