--- a/Client/src/Abhishek/Styles/home.css
+++ b/Client/src/Abhishek/Styles/home.css
@@ -6,6 +6,7 @@
     position:relative;
     top: 0;
     left: 0;
+    padding-top: 10px;
     height: 624px;
     width: 100%;
     margin-top: 40px;
