--- a/Client/src/Utkarsh/UtkarshIpad/ipad.css
+++ b/Client/src/Utkarsh/UtkarshIpad/ipad.css
@@ -1,8 +1,8 @@
 .free_box {
-  background-color: #000;
+  background-color:lightgray;
 }
 .sign_text {
-  color: #ffff;
+  color: black;
   font-weight: 500;
   text-align: center;
   align-items: center;
